examples/neg/name-based-implicits/order.effekt
def foo(a: Int, ?b: Int, c: Int): Unit = { // ERROR implicit

  val x = box { (?i: Int) => () } // ERROR implicit
}

def main() = ()